# arcane_bridge

./: .gitignore  README.md
.github/workflows/: release.yml
backend/: Cargo.toml  tauri.conf.json
backend/capabilities/: console-window.json  default.json
backend/icons/: icon.icns
backend/src/: activity_log.rs  bridge_admin.rs  console_window.rs  hub_process.rs  hub_runtime.rs  lib.rs  main.rs  shell_visibility.rs  updates.rs
backend/src/hub/: connections.rs  io.rs  mod.rs  protocol.rs  server.rs  state.rs
bootstrap/: Cargo.toml
bootstrap/src/: lib.rs
docs/: PIGGYBACK.md  RELEASE.md
hub/: BUILD.md  README.md  package-lock.json  package.json
hub/scripts/: build-hub-exe.mjs  build-standalone.mjs  verify-hub-bundle.mjs
hub/src/: connections.js  index.js  protocol.js  server.js  state.js
scripts/: build-local.sh  release.sh  stage-from-github-release.sh  stage-installers-for-apps.sh  sync-version.mjs
