[package]
name = "arcane_bridge"
version = "0.1.0"
description = "Arcane Bridge — system tray hub manager"
edition = "2021"

[lib]
name = "app_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2"

[[bin]]
name = "arcane-bridge"
path = "src/main.rs"
